...
    <string name="ut">University of Texas</string>

    <!--MainMapFragment-->
    <string name="requesting">Requesting&#8230;</string>
    <string name="enter_pickup_address">Enter pickup</string>
    <string name="enter_destination_address">Enter destination</string>
    <string name="set_pickup_location">Set Pickup location</string>
    <string name="minutes">MIN</string>
    <string name="error_places_autocomplete">Unable to fetch address. Please contact support</string>
    <string name="oops">OOPS</string>
    <string name="no_available_cars">Set Pickup location</string>
    <string name="coming_soon_in_your_area">Coming soon in your area</string>

...
    <string name="message_no_driver_available">We are sorry currently no driver is available at your location.</string>
    <string name="message_ride_cancelled_by_driver">Your ride is cancelled by the driver.</string>
    <string name="message_ride_cancelled_by_driver_with_fee">Your ride is cancelled by the driver. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_ride_cancelled_by_admin">Your ride is cancelled by admin.</string>
    <string name="message_ride_cancelled_by_admin_with_fee">Your ride is cancelled by admin. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_ride_cancelled_by_user">Your ride has been successfully cancelled</string>
    <string name="message_ride_cancelled_by_user_with_fee">Your ride has been successfully cancelled. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_active_ride_cancel">The driver has started the trip. You cannot cancel after the trip has started.</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_html">text/html</string>
    <string name="scheme_text">text/plain</string>
...
    <string name="i_agree_and_acknowledge">I AGREE AND ACKNOWLEDGE</string>
    <string name="priority_fare">priority fare</string>
    <string name="more_than_normal_fare">more than normal fare</string>
    <string name="normal_fare">normal fare</string>
    <string name="fare_rate_x">%1$s x</string>

    <string name="cancel_trip">Cancel Trip</string>

    <string name="cancel_trip_with_cancellation_fee">You will be charged\n <![CDATA[
    <br/><b>$%1$.2f cancellation fee.</b><br/><br/>
    ]]> Do you want to cancel the trip?</string>

    <string name="cancel_trip_without_cancellation_fee">You have %1$3d seconds to cancel the ride without being charged\n <![CDATA[
    <br/><b>$%2$.2f cancellation fee.</b><br/><br/>
    ]]> Do you want to cancel the trip?</string>
    <string name="payment_history">Payment History</string>
    <string name="address_not_known">Not known</string>
    <string name="message_empty_payment_history">No rides present</string>

...
