...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@color/black_10_opaq"
        tools:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/ride_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
...
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:elevation="6dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/driver_image_small"
                    android:layout_width="@dimen/driver_avatar_in_ride_big_version_size"
                    android:layout_height="@dimen/driver_avatar_in_ride_big_version_size"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_launcher" />

...
